refactored to remove top-down flow of data, made card fields editable

--- a/mini-exams/src/assets/miniExamsBase.css
+++ b/mini-exams/src/assets/miniExamsBase.css
@@ -1,4 +1,14 @@
 body {
   background-color: rgb(5, 5, 53);
-  color: aliceblue;
+  color: honeydew;
+}
+
+input[type=text] {
+  background-color: inherit;
+  color: honeydew;
+  border: 0;
+}
+
+::placeholder {
+  color: honeydew;
 }
