--- a/mini-exams/src/assets/miniExamsBase.css
+++ b/mini-exams/src/assets/miniExamsBase.css
@@ -1,9 +1,10 @@
 body {
   background-color: rgb(5, 5, 53);
   color: honeydew;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
-input[type=text] {
+input[type=text], textarea {
   background-color: inherit;
   color: honeydew;
   border: 0;
